--- a/pom.xml
+++ b/pom.xml
@@ -172,7 +172,7 @@
 
       <dependency>
         <groupId>javax.servlet.jsp</groupId>
-        <artifactId>jsp-api</groupId>
+        <artifactId>jsp-api</artifactId>
         <version>2.2</version>
       </dependency>
 
@@ -203,4 +203,6 @@
         <version>1.8.5</version>
         <scope>test</scope>
       </dependency>
-    </
+    </dependencies>
+  </dependencyManagement>
+</project>
