--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,13 @@
           </reportPlugins>
         </configuration>
       </plugin>
+
+      <!-- Add the maven-war-plugin with an updated version -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>3.3.1</version>
+      </plugin>
     </plugins>
 
     <pluginManagement>
